INFRA-327 Minor Changes